src/test/ui/self/self_type_keyword.stderr
error: expected identifier, found keyword `Self`
  --> $DIR/self_type_keyword.rs:4:10
   |
LL |   struct Self;
   |          ^^^^ expected identifier, found keyword

error: expected identifier, found keyword `Self`
  --> $DIR/self_type_keyword.rs:16:13
   |
LL |         ref Self => (),
   |             ^^^^ expected identifier, found keyword

error: expected identifier, found keyword `Self`
  --> $DIR/self_type_keyword.rs:18:13
   |
LL |         mut Self => (),
   |             ^^^^ expected identifier, found keyword

error: expected identifier, found keyword `Self`
  --> $DIR/self_type_keyword.rs:20:17
   |
LL |         ref mut Self => (),
   |                 ^^^^ expected identifier, found keyword

error: expected identifier, found keyword `Self`
  --> $DIR/self_type_keyword.rs:24:15
   |
LL |         Foo { Self } => (),
   |               ^^^^ expected identifier, found keyword

error: expected identifier, found keyword `Self`
  --> $DIR/self_type_keyword.rs:30:26
   |
LL |     extern crate core as Self;
   |                          ^^^^ expected identifier, found keyword

error: expected identifier, found keyword `Self`
  --> $DIR/self_type_keyword.rs:35:32
   |
LL |     use std::option::Option as Self;
   |                                ^^^^ expected identifier, found keyword

error: expected identifier, found keyword `Self`
  --> $DIR/self_type_keyword.rs:40:11
   |
LL |     trait Self {}
   |           ^^^^ expected identifier, found keyword

error: lifetimes cannot use keyword names
  --> $DIR/self_type_keyword.rs:8:12
   |
LL | struct Bar<'Self>;
   |            ^^^^^

error: cannot find macro `Self!` in this scope
  --> $DIR/self_type_keyword.rs:22:9
   |
LL |         Self!() => (),
   |         ^^^^

error[E0392]: parameter `'Self` is never used
  --> $DIR/self_type_keyword.rs:8:12
   |
LL | struct Bar<'Self>;
   |            ^^^^^ unused type parameter
   |
   = help: consider removing `'Self` or using a marker such as `std::marker::PhantomData`

error: aborting due to 11 previous errors

For more information about this error, try `rustc --explain E0392`.
